Version 3.4.2 (29. Juni 2025)

- Sektionsfahren: Alterskategorie 18-42 ist nicht relevant.

- Sektionsfahren: Notenblatt der Sektion zeigt auch die Abzüge und Bemerkungen
  auf Stufe Gruppe und/oder Sektion.

- Generationenpaar: Seitenumbruch bei gerader Zahl, damit Paare zusammen
  erscheinen.


Version 3.4.1 (22. Juni 2025)

- Bester Fahrchef: Basierend auf Excel von Tom die korrekten Fahrchefs
  aller Eidgenössischen korrekt eingetragen.

- Bugfix: Wenn kein vorheriges Eidgenössisches für Bester Fahrchef gefunden
  wird, gibt es keinen Crash mehr.


Version 3.4.0 (22. Juni 2025)

- Bester Fahrchef: Neue Rangliste (General Guisan Preis). Valdierung eingebaut,
  damit für alle Gruppen einer Sektion der gleiche Fahrchef eingegeben wird.

- Sektionsrangliste: Zeige Rayon, damit Reussbecher und Coupe Romande
  am Eidgenössischen einfach ermittelt werden kann.

- Wettkampf: Markiere die Eidgenössischen, damit man die Spezialranglisten
  auswerten kann. Zudem die durchführende Sektion eingeführt, weil das
  auch ein Spezialpreis des Eidgenössischen ist.

- Sektionsfahren: Auf PDF Rangliste auch Striping zur besseren Lesbarkeit
  eingeführt.

- Sektionsfahren: Auf Rangliste weitere Alterskategorien eingefügt:
    18-42: Überprüfung der 80% Regel
      ≤20: Zunft zum Giritz Wanderpreis

- Ältestes Fahrerpaar: Neue Rangliste, hauptsächlich fürs Eidgenössische.

- Generationenpaar: Neue Disziplin, um den Generationenpreis auszuwerten.

- Richtzeiten: In Wynau 2025 beim Posten E-G gab es zu lange Zeiten, die zu
  sehr wenigen Punkten führten. Leider ist es nicht aufgefallen, weil es
  tatsächlich lange Zeiten gab. Darum nun einen Link auf das Notenblatt
  eingefügt, damit man sehr schnell die anderen Zeiten sehen kann.

- Sektionsfahren: Mehrere Sektionen können nun auf der Rangliste den gleichen
  Platz einnehmen. Entspricht einer Änderung im Wettkampfreglement von November
  2024.

- Gruppenschnüren: Nummerierung Gruppen der gleichen Sektion zusätzlich pro