@@ -1,5 +1,10 @@
 Version 3.4.2 (29. Juni 2025)
 
+- Einzelfahren: Wenn Kranzlimite als erstes auf einer neuen Seite kommt, wurde
+  die Kranzlimite nicht dargestellt. Statt einen komplizierten Algorithmus
+  einzubauen, den Paginator nach Rücksprache mit Tom und Dani Sigg ganz
+  entfernt.
+
 - Sektionsfahren: Alterskategorie 18-42 ist nicht relevant.
 
 - Sektionsfahren: Notenblatt der Sektion zeigt auch die Abzüge und Bemerkungen
